add google login setup in head fo index.html file, add google login button in login page

--- a/react-front-end/public/index.html
+++ b/react-front-end/public/index.html
@@ -2,12 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=yes"
     />
+    <!-- Google Sign-In API -->
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta
+      name="google-signin-client_id"
+      content="680587798801-qp0mndlka16fgm91ed97gkoot3ru5145.apps.googleusercontent.com"
+    />
+    <!-- Google Sign-In API -->
     <meta name="theme-color" content="#000000" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
