set google login to local cookies

--- a/react-front-end/public/index.html
+++ b/react-front-end/public/index.html
@@ -9,10 +9,7 @@
     />
     <!-- Google Sign-In API -->
     <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <meta
-      name="google-signin-client_id"
-      content="680587798801-qp0mndlka16fgm91ed97gkoot3ru5145.apps.googleusercontent.com"
-    />
+    <script src="https://apis.google.com/js/api.js" async defer></script>
     <!-- Google Sign-In API -->
     <meta name="theme-color" content="#000000" />
     <!--
