--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     />
     <!-- Google Sign-In API -->
     <script src="https://apis.google.com/js/platform.js"></script>
-    <script src="https://apis.google.com/js/api.js"></script>
+    <!-- <script src="https://apis.google.com/js/api.js"></script> -->
     <!-- Google Sign-In API -->
     <meta name="theme-color" content="#000000" />
     <title>Bookkeeping-in-Web</title>
