add react history to handle navigating senario

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=yes"
     />
     <!-- Google Sign-In API -->
-    <script src="https://apis.google.com/js/platform.js?onload=init"></script>
-    <!-- <script src="https://apis.google.com/js/api.js"></script> -->
+    <script src="https://apis.google.com/js/platform.js"></script>
+    <script src="https://apis.google.com/js/api.js"></script>
     <!-- Google Sign-In API -->
     <meta name="theme-color" content="#000000" />
     <title>Bookkeeping-in-Web</title>
